src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>